--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="src/assets/logo1.png" />
+    <link rel="icon" type="image/svg+xml" href="src/assets/logo1.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DailyFoods</title>
   </head>
