--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="src/assets/logo1.webp" />
+    <link rel="icon" href="src/assets/logo1.webp" sizes="32x16" />
     <meta name="description" content="DailyFoods simple recipe finder app" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DailyFoods</title>
